--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --config restart.json",
     "test": "jest"
   },
-  "author": "Orlando J Betancourth orlando.betancourth@gmail.com",
+  "author": "José Eduardo Reyes Suazo eduardo.reyessuazo@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -30,10 +30,13 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
+    "mongodb": "^5.1.0",
     "winston": "^3.8.2"
   }
 }
