--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "generate-pincode": "^6.0.0",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongodb": "^5.1.0",
